cmake_minimum_required(VERSION 3.16)
project(OS_Study C)

set(CMAKE_C_STANDARD 99)

add_executable(OS_Study main.c)
add_executable(main1 5/1.c)
add_executable(main2 5/2.c)
add_executable(main3 5/3.c)
add_executable(main4 5/4.c)
add_executable(main5 5/5.c)
add_executable(main6 5/6.c)
add_executable(main7 5/7.c)
add_executable(main8 5/8.c)